# ngrams

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
res/: CMakeLists.txt
src/cli/: CMakeLists.txt  main.cpp
src/lib/: ByteNgrams.cpp  CMakeLists.txt  CharNgrams.cpp  INgrams.cpp  WordNgrams.cpp  ngrams.cpp  text2wfreq.cpp  utf8_string.cpp
src/lib/include/ngram/: byte_ngrams.h  char_ngrams.h  config.h  ngram_vector.h  ngrams.h  ngrams_base.h  ternary_search_tree.h  text2wfreq.h  utf8_string.h  word_ngrams.h
test/: CMakeLists.txt  ngram_test.cpp
